app-forward/openshift/openshift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/app-forward/service-a
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8088
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/app-forward/service-b
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
